# rfc822_sanitizer

./: .gitlab-ci.yml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: bench.rs
examples/: simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_string_sanitizer.rs  fuzz_target_1.rs  fuzz_with_fallback.rs
src/: lib.rs
