[package]
name = "rfc822_sanitizer"
version = "0.3.3"
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
description = "rfc822/2822 sanitizer/normalizer."
repository = "https://gitlab.com/alatiera/rfc822_sanitizer"
homepage = "https://gitlab.com/alatiera/rfc822_sanitizer"
documentation = "https://docs.rs/rfc822_sanitizer/"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["rfc822", "rfc2822", "sanitizer"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4"
regex = "0.2"
lazy_static = "0.2.9"

[badges]
travis-ci = { repository = "alatiera/rfc822_sanitizer", branch = "master"}
appveyor = { repository = "alatiera/rfc822_sanitizer", branch = "master", service = "github" }
